# seops

./: README.md  pyproject.toml
seops/: func_ops.py  lazy.py
